--- a/myfirststyle.css
+++ b/myfirststyle.css
@@ -1,5 +1,5 @@
 * {
-  font-family: ‘Georgia’, ‘Times’, serif;
+  font-family: ‘Trebuchet MS’, ‘Helvetica’, sans-serif;
   }
 a {
   color: SteelBlue
